# mva-kernel-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: 1-gabriel-tests.py
src/challenge/: __init__.py  cli.py
src/challenge/data/: __init__.py  cifar10.py  io.py  make.py  paths.py
src/challenge/features/: __init__.py  build.py  resnet.py
src/challenge/models/: __init__.py  kernel.py  predictor.py
src/challenge/visualization/: visualize.py
