[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "challenge"
version = "0.1.0"
description = "Code for the data challenge of the MVA course Kernel Methods.."
readme = "README.md"
requires-python = ">=3.8,<3.11"
license =  {"file" = "MIT"}
authors = [
    {name = "Gabriel Belouze", email = "gabriel.belouze@ens.psl.eu"}
]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "numpy",
    "matplotlib",
    "click",
    "kaggle",
    "rich",
    "pandas",
    "ipykernel",
    "overrides",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pre-commit",
    "twine",
    "toml"
]

[project.urls]
source = "https://github.com/gbelouze/mva-kernel-challenge"
tracker = "https://github.com/gbelouze/mva-kernel-challenge/issues"

[project.scripts]
kernel = "challenge.cli:main"

[tool.flit.module]
name = "challenge"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
